构建实时项目1

--- a/reatime-project/pom.xml
+++ b/reatime-project/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>realtime-common</module>
         <module>realtime-hot-items</module>
+        <module>realtime-generate-data</module>
+        <module>realtime-data</module>
     </modules>
 
 
