构建实时项目 构建数据

--- a/reatime-project/realtime-data/src/main/resources/log4j.properties
+++ b/reatime-project/realtime-data/src/main/resources/log4j.properties
@@ -13,5 +13,4 @@ log4j.appender.file.Append=true
 #log4j.appender.realtime.File.DatePattern='.'yyyy-MM-dd
 log4j.appender.realtime.File.layout=org.apache.log4j.PatternLayout
 log4j.appender.realtime.File.layout.ConversionPattern=%m%n
-
-log4j.logger.com.realtime.data.admin.controller.LoggerController=info,realtime.File,realtime.MyConsole
+log4j.logger.com.realtime.bigdata.data.controller.LoggerController=info,realtime.File,realtime.MyConsole
